界面样式调整

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,4 +25,8 @@
     <color name="buttonColor1">#FF4DA1FF</color>
 
     <color name="spinner">#bcd2f2</color>
+
+    <!-- EditText -->
+    <color name="edit_text_normal_color">#00FF00</color>
+    <color name="edit_text_activated_color">#FF00FF</color>
 </resources>
