--- a/app/src/main/res/drawable/text_cursor.xml
+++ b/app/src/main/res/drawable/text_cursor.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <size android:width="2dp" />
+    <size android:width="10dp" />
 
     <span style="font-family: Arial, Helvetica, sans-serif;"><!-- 光标宽度可以自己定义 --></span>
 
-    <solid android:color="#008000" /><!-- 光标颜色可以自己定义 -->
+    <solid android:color="#bc2a0a" /><!-- 光标颜色可以自己定义 -->
 </shape>
