--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -33,7 +33,7 @@
             android:layout_height="match_parent"
             android:padding="3dp"
             android:text="@string/update_text"
-            android:textColor="@color/white"
+            android:textColor="@color/textColor4"
             android:textSize="18sp"
             android:gravity="center"
             android:textStyle="bold"/>
