--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,11 @@
         <item name="colorControlNormal">@color/textColor2</item>
         <item name="colorControlActivated">@color/red</item>
     </style>
+
+    <!-- EditText 样式 -->
+    <style name="EditTextStyle" parent="Base.Widget.AppCompat.EditText">
+
+        <item name="colorControlNormal">@color/edit_text_normal_color</item>
+        <item name="colorControlActivated">@color/edit_text_activated_color</item>
+    </style>
 </resources>
